cmake_minimum_required(VERSION 3.8)
project(sandbox)
file(GLOB_RECURSE sources src/sandbox/*.cpp)
add_executable(${PROJECT_NAME} ${sources} src/main.cpp)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE dependencies)
target_include_directories(${PROJECT_NAME} PRIVATE src)

file(GLOB_RECURSE test_sources test/*.cpp)
add_executable(${PROJECT_NAME}Test ${sources} ${test_sources})
target_compile_features(${PROJECT_NAME}Test PUBLIC cxx_std_14)
target_include_directories(${PROJECT_NAME}Test SYSTEM PRIVATE dependencies)
target_include_directories(${PROJECT_NAME}Test PRIVATE src)
target_link_libraries(${PROJECT_NAME}Test gtest gtest_main pthread)
enable_testing()
add_test(NAME ${PROJECT_NAME}Test COMMAND ${PROJECT_NAME}Test)
